--- a/style.css
+++ b/style.css
@@ -1,244 +1,122 @@
-@import url("https://fonts.googleapis.com/css?family=Arimo:400,700|Roboto+Slab:400,700");
-
-:root {
-	font-size: calc(0.5vw + 1vh);
-}
-
 * {
-	-webkit-box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
 
+html {
+	font-size: 62.5%;
+}
+
 body {
-	min-width: 420px;
-	background: #060818;
-	color: #fff;
-	background: linear-gradient(15deg, #d33f34 50%, #a61322 50.1%);
-	height: 100vh;
-	scale: 0.1;
-	animation: zoom-in 1s normal forwards ease-in-out;
-}
-@keyframes zoom-in {
-	0% {
-		scale: 0.1;
-	}
-	100% {
-		scale: 1;
-	}
-}
-
-h1,
-h4 {
-	font-family: "Arimo", sans-serif;
-	line-height: 1.3;
-}
-
-header h1 {
-	font-size: 5.4rem;
-	margin: 4rem 0 0 0;
-}
-
-span {
-	font-size: 3rem;
-}
-
-p {
-	font-family: "Roboto Slab", serif;
-	padding: 0px;
-	margin: 0px;
-}
-
-a,
-a:link,
-a:active,
-a:visited {
-	color: #fff;
-	text-decoration: none;
-	border-bottom: #000013 0.16rem solid;
-}
-
-a:hover {
-	color: #000013;
-	border-bottom: #0066aa 0.16rem solid;
-}
-
-header,
-footer {
-	width: 40rem;
-	margin: 2rem auto;
-	text-align: center;
-	font-size: 22px;
+	font-size: 1.6rem;
+	font-family: "Poppins", sans-serif;
 }
 
 .add-task-container {
-	width: 50%;
-	justify-content: space-between;
 	display: flex;
-	margin: 0 auto;
-	padding: 10px;
-	position: relative;
-	background: #0e1726;
-	overflow: hidden;
-	border-radius: 10px;
-	border: 1px solid #1b2e4b;
-	box-shadow: 18px 20px 10.3px -23px rgb(0 0 0 / 15%);
-	font-size: 18px;
-}
-
-.main-container {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-}
-
-.columns {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: start;
-	-ms-flex-align: start;
-	align-items: flex-start;
-	margin: 1.6rem auto;
-	width: 80%;
-	color: #bfc9d4;
-}
-
-.column {
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
 	width: 100%;
+	background: linear-gradient(135deg, #845ec2, #b39cd0);
+}
+
+.todo-app {
+	width: 100%;
+	max-width: 54rem;
+	margin: 10rem auto 2rem;
+	padding: 4rem 3rem;
+	border-radius: 1rem;
+	background: linear-gradient(to right, #ece9e6, #ffffff);
+	box-shadow: rgba(0, 0, 0, 0.15) 0rem 0.2rem 0.8rem;
+}
+
+.todo-app h1 {
+	color: #4f1787;
+	display: flex;
+	align-items: center;
+	margin-bottom: 2rem;
+}
+
+.todo-app i {
+	margin-right: 1rem;
+}
+
+.row {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-radius: 3rem;
+	padding-left: 2rem;
+	margin-bottom: 2.5rem;
+	background-color: #f5f5f7;
+}
+
+input {
 	flex: 1;
-	margin: 0 10px;
-	position: relative;
-	background: #0e1726;
-	overflow: hidden;
-	border-radius: 10px;
-	border: 1px solid #1b2e4b;
-	box-shadow: 18px 20px 10.3px -23px rgb(0 0 0 / 15%);
+	border: none;
+	outline: none;
+	background-color: transparent;
+	padding: 1rem;
 }
 
-.column-header {
-	font-size: 17px;
-	border-bottom: #000013 0.2rem solid;
-}
-
-.column-header h4 {
-	text-align: center;
-}
-
-.task-list {
-	min-height: 3rem;
-}
-
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-li {
-	list-style-type: none;
-}
-
-.column-button {
-	text-align: center;
-	padding: 0.1rem;
-}
-
-.button {
-	font-family: "Arimo", sans-serif;
-	font-weight: 700;
-	border: #000013 0.14rem solid;
-	border-radius: 0.2rem;
-	color: #000013;
-	padding: 0.6rem 1rem;
-	margin-bottom: 0.3rem;
+button {
+	border: none;
+	outline: none;
+	padding: 1.6rem 5rem;
+	background-color: #7a1cac;
+	color: #f5f7f8;
+	font-weight: 800;
+	border-radius: 4rem;
 	cursor: pointer;
 }
 
-.delete-button {
-	background-color: #ff4444;
-	margin: 0.1rem auto 0.6rem auto;
-}
-
-.delete-button:hover {
-	background-color: #fa7070;
-}
-
-.add-button {
-	background-color: #ffcb1e;
-	padding: 0 1rem;
-	height: 3.8rem;
-	width: 10rem;
-	margin-top: 0.6rem;
-}
-
-.add-button:hover {
-	background-color: #ffdd6e;
-}
-
-.task {
-	background: #1b2e4b;
-	margin: 0.4rem;
-	height: 4rem;
+ul li {
+	list-style: none;
+	padding: 1rem 0.8rem 1rem 5rem;
+	user-select: none;
+	cursor: pointer;
+	position: relative;
 	display: flex;
-	-webkit-box-pack: center;
-	justify-content: center;
-	list-style-type: none;
-	transition: all 0.3s;
-	cursor: move;
-	text-align: center;
-	vertical-align: middle;
-	border-radius: 10px;
-	font-size: 15px;
+	align-items: center;
+	justify-content: baseline;
 }
 
-#taskText {
-	border: #161515 0.15rem solid;
-	border-radius: 0.2rem;
-	text-align: center;
-	font-family: "Roboto Slab", serif;
+ul li::before {
+	content: "";
+	position: absolute;
+	height: 2.8rem;
+	width: 2.8rem;
+	/* 	border-radius: 50%; */
+	background-image: url(https://cdn.discordapp.com/attachments/1290843633171566695/1290849999625781269/WhatsApp_Image_2024-10-01_at_17.31.45-removebg-preview.png?ex=66fdf53e&is=66fca3be&hm=5333a476dc46c0a79f666a6e90c2063dfb3bbd20f700e443958b764ed19cb8fe&);
+	background-size: cover;
+	background-position: center;
+	margin: 0rem -4rem;
+}
+
+ul li.checked {
+	color: #555;
+	text-decoration: line-through;
+}
+
+ul li.checked::before {
+	background-image: url(https://cdn.discordapp.com/attachments/1290843633171566695/1290849999395225622/WhatsApp_Image_2024-10-01_at_17.31.44-removebg-preview.png?ex=66fdf53e&is=66fca3be&hm=49004145e8ef336488180a158e37a51493170cd6d0c750ea7b94d512e6769f06&);
+}
+
+ul li span {
+	color: #555;
+	width: 4rem;
 	height: 4rem;
-	width: 90%;
-	margin: auto 0.8rem auto 0.1rem;
-	background: #1b2e4b;
-	color: #bfc9d4 !important;
+	font-size: 2.2rem;
+	line-height: 4rem;
+	border-radius: 50%;
+	text-align: center;
+	position: absolute;
+	right: 0;
+	top: 5px;
 }
 
-.task p {
-	margin: auto;
-}
-
-/* Dragula CSS Release 3.2.0 from: https://github.com/bevacqua/dragula */
-
-.gu-mirror {
-	position: fixed !important;
-	margin: 0 !important;
-	z-index: 9999 !important;
-	opacity: 0.8;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-	filter: alpha(opacity=80);
-}
-
-.gu-hide {
-	display: none !important;
-}
-
-.gu-unselectable {
-	-webkit-user-select: none !important;
-	-moz-user-select: none !important;
-	-ms-user-select: none !important;
-	user-select: none !important;
-}
-
-.gu-transit {
-	opacity: 0.2;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
-	filter: alpha(opacity=20);
-	border: 1px solid #00ff7f !important;
-	box-shadow: 1px 0 4px 1px #00ff7f !important;
-	transform: scale(1.02);
-}
-.gu-mirror {
-	border: 1px solid #00ff7f !important;
-	box-shadow: 1px 0 4px 1px #00ff7f !important;
-	transform: scale(1.02);
+ul li span:hover {
+	background: #edeef0;
 }
